--- a/package.json
+++ b/package.json
@@ -19,6 +19,20 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
+    "postcss-custom-media": "^10.0.6",
+    "postcss-custom-media-generator": "^1.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^9.5.14",
+    "postcss-pxtorem": "^6.1.0",
+    "prettier": "^3.3.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
