--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "framer-motion": "^11.3.29",
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "swiper": "^11.1.10"
+    "framer-motion": "^11.0.3",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "lint-staged": "^15.2.5",
-    "postcss": "^8.4.38",
-    "postcss-custom-media": "^10.0.6",
-    "postcss-custom-media-generator": "^1.1.0",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.33",
+    "postcss-custom-media": "^10.0.2",
+    "postcss-custom-media-generator": "^1.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-nested": "^6.0.1",
-    "postcss-preset-env": "^9.5.14",
-    "postcss-pxtorem": "^6.1.0",
-    "prettier": "^3.3.0",
-    "typescript": "^5"
+    "postcss-preset-env": "^9.3.0",
+    "postcss-pxtorem": "^6.0.0",
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
