fix con comando yarn prettier --write .

--- a/postcss.config.json
+++ b/postcss.config.json
@@ -29,9 +29,7 @@
     [
       "postcss-pxtorem",
       {
-        "propList": [
-          "*"
-        ]
+        "propList": ["*"]
       }
     ],
     "postcss-nested"
